Implement complete production-ready architecture
Phase 1: Critical Foundation
- Complete Auth/RBAC with Supabase Auth, JWT verification, and role-based access control
- Implement RQ task queue for async processing of long-running agent tasks
- Add OpenTelemetry instrumentation for proper Langfuse trace collection
- Implement automated database backups with n8n scheduling and Supabase Storage

Phase 2: Testing & Quality
- Expand test coverage with unit, integration, and E2E tests for all components
- Create agent evaluation framework using Ragas with test cases and metrics

Phase 3: Monitoring & Observability
- Set up Prometheus and Grafana for infrastructure and application metrics
- Integrate Sentry for error tracking and alerting

Phase 4: Production Readiness
- Implement multi-tenancy support with row-level security and tenant isolation
- Create production deployment configurations (Kubernetes, Terraform)

Features:
- Authentication middleware with JWT and API key support
- Task queue service with RQ worker
- Prometheus metrics middleware
- Comprehensive test suite
- Agent evaluation framework
- Database backup automation
- Multi-tenancy with RLS policies
- Kubernetes manifests and Terraform configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,28 @@ services:
     depends_on:
       - redis
 
+  # RQ Worker - Async task processing
+  rq-worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.worker
+    container_name: rq-worker
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - REDIS_DB=1
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - SUPABASE_URL=${SUPABASE_URL:-http://host.docker.internal:54321}
+      - SUPABASE_SERVICE_KEY=${SUPABASE_SERVICE_KEY}
+      - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+      - GEMINI_MODEL=${GEMINI_MODEL:-gemini-2.0-flash-exp}
+    networks:
+      - adk-network
+    restart: unless-stopped
+    depends_on:
+      - redis
+    volumes:
+      - ./backend:/app
+
 networks:
   adk-network:
     driver: bridge
