--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,11 +17,19 @@ dependencies = [
     "redis>=5.0.0",
     "rq>=1.15.0",
     "tenacity>=8.2.0",
+    "openinference-instrumentation-google-adk>=0.1.0",
+    "opentelemetry-api>=1.21.0",
+    "opentelemetry-sdk>=1.21.0",
+    "opentelemetry-instrumentation-fastapi>=0.42b0",
+    "opentelemetry-instrumentation-httpx>=0.42b0",
+    "prometheus-client>=0.19.0",
+    "sentry-sdk[fastapi]>=1.38.0",
     "python-dotenv>=1.0.0",
     "httpx>=0.25.0",
     "python-multipart>=0.0.6",
     "docker>=6.1.0",
     "psutil>=5.9.0",
+    "python-jose[cryptography]>=3.3.0",
 ]
 
 [project.optional-dependencies]
@@ -33,6 +41,10 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.7.0",
     "types-redis>=4.6.0",
+]
+eval = [
+    "ragas>=0.1.0",
+    "datasets>=2.14.0",
 ]
 
 [build-system]
